--- a/index.html
+++ b/index.html
@@ -61,10 +61,14 @@
 		<br>
 		
 		<h3 style="margin-left: 50px;">Игры и многое другое:</h3>
-		<center><a href="solar_system/index.html" class="floating-button">Наша система</a>
-		<a href="space_shooter/index.html" class="floating-button">Шутер</a>
-		<a href="asteroids/index.html" class="floating-button">Астероиды</a>
-		<a href="history/index.html" class="floating-button">История</a></center>
+		<center>
+			<a href="solar_system/index.html" class="floating-button">Наша система</a>
+			<a href="space_shooter/index.html" class="floating-button">Шутер</a>
+			<a href="asteroids/index.html" class="floating-button">Астероиды</a>
+			<a href="history/index.html" class="floating-button">История</a>
+			<a href="length/index.html" class="floating-button">Линейка</a>
+			<a href="starry_sky/index.html" class="floating-button">Небо</a>
+		</center>
 	
 		<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdlJdjqnAV0LIdzGScGbaOeXVtxke2f9_ZD4C-FD2_pAqxrFA/viewform?embedded=true" style="margin-left: 235px;" width="640" height="720" frameborder="0" marginheight="0" marginwidth="0">Загрузка…</iframe>
 		
