--- a/web/index.html
+++ b/web/index.html
@@ -71,6 +71,7 @@
 		</center>
 	
 		<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdlJdjqnAV0LIdzGScGbaOeXVtxke2f9_ZD4C-FD2_pAqxrFA/viewform?embedded=true" style="margin-left: 235px;" width="640" height="720" frameborder="0" marginheight="0" marginwidth="0">Загрузка…</iframe>
+		<iframe src="https://www.chatbase.co/chatbot/space-keupoqb0n" style="margin-left: 235px; border-radius: 10px;" width="640" height="720" frameborder="0" marginheight="0" marginwidth="0"></iframe>
 		
 		<canvas></canvas>
 		<script src="script.js"></script>
