Feat: Информация о каждой планете

--- a/web/index.html
+++ b/web/index.html
@@ -70,6 +70,7 @@
 			<a href="starry_sky/index.html" class="floating-button">Небо</a>
 		</center>
 	
+		<iframe src="planet_gallery/index.html" style="margin-left: 235px; border-radius: 10px;" width="640" height="720" frameborder="0" marginheight="0" marginwidth="0"></iframe>
 		<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdlJdjqnAV0LIdzGScGbaOeXVtxke2f9_ZD4C-FD2_pAqxrFA/viewform?embedded=true" style="margin-left: 235px;" width="640" height="720" frameborder="0" marginheight="0" marginwidth="0">Загрузка…</iframe>
 		<iframe src="https://www.chatbase.co/chatbot/space-keupoqb0n" style="margin-left: 235px; border-radius: 10px;" width="640" height="720" frameborder="0" marginheight="0" marginwidth="0"></iframe>
 		
