--- a/web/length/index.html
+++ b/web/length/index.html
@@ -1977,18 +1977,18 @@
 
 <div class="essay" style="left:1700500px"><span id="might-as-well">Пора остановиться. </span><span style="margin-left:300px"><a href="../index.html"><span id="back-to-josh">Обратно на Главную</span></a>
 <ul class="nav">
-<li><a href="https://joshworth.com/dev/pixelspace/pixelspace_solarsystem.html#prevanchor" class="prevjump"><img src="./system_files/jumpprev.svg"></a></li>
-<li><a href="https://joshworth.com/dev/pixelspace/pixelspace_solarsystem.html#suntxt" class="planetjump"><img src="./system_files/sun_icon.svg"></a></li>
-<li><a href="https://joshworth.com/dev/pixelspace/pixelspace_solarsystem.html#merctxt" class="planetjump"><img src="./system_files/mercury_icon.svg"></a></li>
-<li><a href="https://joshworth.com/dev/pixelspace/pixelspace_solarsystem.html#venustxt" class="planetjump"><img src="./system_files/venus_icon.svg"></a></li>
-<li><a href="https://joshworth.com/dev/pixelspace/pixelspace_solarsystem.html#earthtxt" class="planetjump"><img src="./system_files/earth_icon.svg"></a></li>
-<li><a href="https://joshworth.com/dev/pixelspace/pixelspace_solarsystem.html#marstxt" class="planetjump"><img src="./system_files/mars_icon.svg"></a></li>
-<li><a href="https://joshworth.com/dev/pixelspace/pixelspace_solarsystem.html#jupitertxt" class="planetjump"><img src="./system_files/jupiter_icon.svg"></a></li>
-<li><a href="https://joshworth.com/dev/pixelspace/pixelspace_solarsystem.html#saturntxt" class="planetjump"><img src="./system_files/saturn_icon.svg"></a></li>
-<li><a href="https://joshworth.com/dev/pixelspace/pixelspace_solarsystem.html#uranustxt" class="planetjump"><img src="./system_files/uranus_icon.svg"></a></li>
-<li><a href="https://joshworth.com/dev/pixelspace/pixelspace_solarsystem.html#neptunetxt" class="planetjump"><img src="./system_files/neptune_icon.svg"></a></li>
-<li><a href="https://joshworth.com/dev/pixelspace/pixelspace_solarsystem.html#plutotxt" class="planetjump"><img src="./system_files/pluto_icon.svg"></a></li>
-<li><a href="https://joshworth.com/dev/pixelspace/pixelspace_solarsystem.html#nextanchor" class="nextjump"><img src="./system_files/jumpnext.svg"></a></li>
+<li><a href="index.html#prevanchor" class="prevjump"><img src="./system_files/jumpprev.svg"></a></li>
+<li><a href="index.html#suntxt" class="planetjump"><img src="./system_files/sun_icon.svg"></a></li>
+<li><a href="index.html#merctxt" class="planetjump"><img src="./system_files/mercury_icon.svg"></a></li>
+<li><a href="index.html#venustxt" class="planetjump"><img src="./system_files/venus_icon.svg"></a></li>
+<li><a href="index.html#earthtxt" class="planetjump"><img src="./system_files/earth_icon.svg"></a></li>
+<li><a href="index.html#marstxt" class="planetjump"><img src="./system_files/mars_icon.svg"></a></li>
+<li><a href="index.html#jupitertxt" class="planetjump"><img src="./system_files/jupiter_icon.svg"></a></li>
+<li><a href="index.html#saturntxt" class="planetjump"><img src="./system_files/saturn_icon.svg"></a></li>
+<li><a href="index.html#uranustxt" class="planetjump"><img src="./system_files/uranus_icon.svg"></a></li>
+<li><a href="index.html#neptunetxt" class="planetjump"><img src="./system_files/neptune_icon.svg"></a></li>
+<li><a href="index.html#plutotxt" class="planetjump"><img src="./system_files/pluto_icon.svg"></a></li>
+<li><a href="index.html#nextanchor" class="nextjump"><img src="./system_files/jumpnext.svg"></a></li>
 </ul>
 <div id="distance-counter"><div id="counter"></div><span id="selectarrow"><img src="./system_files/select-arrow.svg"></span>
 <div id="unitselect">
