--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
 			<a href="history/index.html" class="floating-button">История</a>
 			<a href="length/index.html" class="floating-button">Линейка</a>
 			<a href="starry_sky/index.html" class="floating-button">Небо</a>
+			<a href="jupiter_dream/index.html" class="floating-button">Юпитер</a>
 		</center>
 	
 		<iframe src="planet_gallery/index.html" style="margin-left: 235px; border-radius: 10px;" width="640" height="720" frameborder="0" marginheight="0" marginwidth="0"></iframe>
