--- a/web/index.html
+++ b/web/index.html
@@ -62,6 +62,7 @@
 		
 		<h3 style="margin-left: 50px;">Игры и многое другое:</h3>
 		<center>
+			<a href="app/index.html" class="floating-button">Android</a>
 			<a href="solar_system/index.html" class="floating-button">Наша система</a>
 			<a href="space_shooter/index.html" class="floating-button">Шутер</a>
 			<a href="asteroids/index.html" class="floating-button">Астероиды</a>
@@ -69,6 +70,7 @@
 			<a href="length/index.html" class="floating-button">Линейка</a>
 			<a href="starry_sky/index.html" class="floating-button">Небо</a>
 			<a href="jupiter_dream/index.html" class="floating-button">Юпитер</a>
+			<a href="intro/index.html" class="floating-button">Интро</a>
 		</center>
 	
 		<iframe src="planet_gallery/index.html" style="margin-left: 235px; border-radius: 10px;" width="640" height="720" frameborder="0" marginheight="0" marginwidth="0"></iframe>
