Feat: Браузер для iOS

--- a/web/index.html
+++ b/web/index.html
@@ -62,7 +62,8 @@
 		
 		<h3 style="margin-left: 50px;">Игры и многое другое:</h3>
 		<center>
-			<a href="app/index.html" class="floating-button">Android</a>
+			<a href="android/index.html" class="floating-button">Android</a>
+			<a href="ios/index.html" class="floating-button">iOS</a>
 			<a href="solar_system/index.html" class="floating-button">Наша система</a>
 			<a href="space_shooter/index.html" class="floating-button">Шутер</a>
 			<a href="asteroids/index.html" class="floating-button">Астероиды</a>
