Feat: Браузер Astra

--- a/web/index.html
+++ b/web/index.html
@@ -64,6 +64,7 @@
 		<center>
 			<a href="android/index.html" class="floating-button">Android</a>
 			<a href="ios/index.html" class="floating-button">iOS</a>
+			<a href="astra/index.html" class="floating-button">Astra</a>
 			<a href="solar_system/index.html" class="floating-button">Наша система</a>
 			<a href="space_shooter/index.html" class="floating-button">Шутер</a>
 			<a href="asteroids/index.html" class="floating-button">Астероиды</a>
@@ -72,6 +73,7 @@
 			<a href="starry_sky/index.html" class="floating-button">Небо</a>
 			<a href="jupiter_dream/index.html" class="floating-button">Юпитер</a>
 			<a href="intro/index.html" class="floating-button">Интро</a>
+			<a href="https://t.me/astranevs" class="floating-button">Telegram</a>
 		</center>
 	
 		<iframe src="planet_gallery/index.html" style="margin-left: 235px; border-radius: 10px;" width="640" height="720" frameborder="0" marginheight="0" marginwidth="0"></iframe>
