--- a/web/index.html
+++ b/web/index.html
@@ -74,6 +74,7 @@
 			<a href="jupiter_dream/index.html" class="floating-button">Юпитер</a>
 			<a href="intro/index.html" class="floating-button">Интро</a>
 			<a href="https://t.me/astranevs" class="floating-button">Telegram</a>
+			<a href="other/index.html" class="floating-button">Прочее</a>
 		</center>
 	
 		<iframe src="planet_gallery/index.html" style="margin-left: 235px; border-radius: 10px;" width="640" height="720" frameborder="0" marginheight="0" marginwidth="0"></iframe>
