--- a/other/index.html
+++ b/other/index.html
@@ -53,7 +53,7 @@
 
 <div class="card card-2">
   <h2>Starry VPN v1.0</h2>
-  <span class="filename">_Starry_VPN_16929221</span>
+  <span class="filename">_Starry_VPN_16929221.apk</span>
   <h2 class="changelog_title">Характеристики</h2>
   <div class="changelog">
     <ul>
@@ -64,6 +64,44 @@
     </ul>
   </div>
   <a href="_Starry_VPN_16929221.apk" class="btn">
+    Скачать
+  </a>
+</div>
+
+<br>
+
+<div class="card card-2">
+  <h2>UniRead v1.0</h2>
+  <span class="filename">_UniRead_16933171.apk</span>
+  <h2 class="changelog_title">Характеристики</h2>
+  <div class="changelog">
+    <ul>
+      <li>Название: UniRead</li>
+      <li>Версия: 1.0</li>
+      <li>Язык: русский, английский</li>
+      <li>Описание: читайте книги про космос в нашем приложении</li>
+    </ul>
+  </div>
+  <a href="_UniRead_16933171.apk" class="btn">
+    Скачать
+  </a>
+</div>
+
+<br>
+
+<div class="card card-2">
+  <h2>Wall Space v1.0</h2>
+  <span class="filename">_Wall_Space_16933120.apk</span>
+  <h2 class="changelog_title">Характеристики</h2>
+  <div class="changelog">
+    <ul>
+      <li>Название: Wall Space</li>
+      <li>Версия: 1.0</li>
+      <li>Язык: русский, английский</li>
+      <li>Описание: смените свои обои на космические обои</li>
+    </ul>
+  </div>
+  <a href="_Wall_Space_16933120.apk" class="btn">
     Скачать
   </a>
 </div>
