--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
 			<a href="jupiter_dream/index.html" class="floating-button">Юпитер</a>
 			<a href="intro/index.html" class="floating-button">Интро</a>
 			<a href="https://t.me/astranevs" class="floating-button">Telegram</a>
+			<a href="https://t.me/astrafeedBot" class="floating-button">Feedback</a>
 			<a href="other/index.html" class="floating-button">Прочее</a>
 		</center>
 	
