--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
 		<iframe src="planet_gallery/index.html" style="margin-left: 235px; border-radius: 10px;" width="640" height="720" frameborder="0" marginheight="0" marginwidth="0"></iframe>
 		<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdlJdjqnAV0LIdzGScGbaOeXVtxke2f9_ZD4C-FD2_pAqxrFA/viewform?embedded=true" style="margin-left: 235px;" width="640" height="720" frameborder="0" marginheight="0" marginwidth="0">Загрузка…</iframe>
 		<iframe src="https://www.chatbase.co/chatbot/space-keupoqb0n" style="margin-left: 235px; border-radius: 10px;" width="640" height="720" frameborder="0" marginheight="0" marginwidth="0"></iframe>
+		<iframe src="https://discord.com/widget?id=1093150726043205683&theme=dark" style="margin-left: 235px; border-radius: 10px;" width="640" height="720" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
 		
 		<canvas></canvas>
 		<script src="script.js"></script>
