--- a/web/index.html
+++ b/web/index.html
@@ -18,22 +18,22 @@
 		<div class="slideshow-container">
 			<div class="mySlides fade">
 				<div class="numbertext">1 / 6</div>
-				<img src="images/5a.jpg" style="width:100%">
+				<a href="press/5a.pptx"><img src="images/5a.png" style="width:100%"></a>
 				<div class="text">5 альфа</div>
 			</div>
 			<div class="mySlides fade">
 				<div class="numbertext">2 / 6</div>
-				<img src="images/5b.jpg" style="width:100%">
+				<a href="press/5b.pdf"><img src="images/5b.png" style="width:100%"></a>
 				<div class="text">5 бета</div>
 			</div>
 			<div class="mySlides fade">
 				<div class="numbertext">3 / 6</div>
-				<img src="images/6a.jpg" style="width:100%">
+				<a href="press/6a.ppt"><img src="images/6a.png" style="width:100%"></a>
 				<div class="text">6 альфа</div>
 			</div>
 			<div class="mySlides fade">
 				<div class="numbertext">4 / 6</div>
-				<img src="images/6b.jpg" style="width:100%">
+				<a href="press/6b.pptx"><img src="images/6b.png" style="width:100%"></a>
 				<div class="text">6 бета</div>
 			</div>
 			<div class="mySlides fade">
@@ -43,7 +43,7 @@
 			</div>
 			<div class="mySlides fade">
 				<div class="numbertext">6 / 6</div>
-				<img src="images/7b.jpg" style="width:100%">
+				<a href="press/7b.pdf"><img src="images/7b.png" style="width:100%"></a>
 				<div class="text">7 бета</div>
 			</div>
 			<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
