--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			</div>
 			<div class="mySlides fade">
 				<div class="numbertext">3 / 6</div>
-				<a href="press/6a.ppt"><img src="images/6a.png" style="width:100%"></a>
+				<a href="press/6a.pptx"><img src="images/6a.png" style="width:100%"></a>
 				<div class="text">6 альфа</div>
 			</div>
 			<div class="mySlides fade">
@@ -43,7 +43,7 @@
 			</div>
 			<div class="mySlides fade">
 				<div class="numbertext">6 / 6</div>
-				<a href="https://drive.google.com/file/d/1twD7YtpxanTAdf-Jy52Usm5xsXF29WRj/view?usp=sharing"><img src="images/7b.png" style="width:100%"></a>
+				<a href="press/7b.pdf"><img src="images/7b.png" style="width:100%"></a>
 				<div class="text">7 бета</div>
 			</div>
 			<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
