--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<div class="slideshow-container">
 			<div class="mySlides fade">
 				<div class="numbertext">1 / 6</div>
-				<a href="press/5a.pptx"><img src="images/5a.png" style="width:100%"></a>
+				<a href="press/5a.pdf"><img src="images/5a.png" style="width:100%"></a>
 				<div class="text">5 альфа</div>
 			</div>
 			<div class="mySlides fade">
@@ -28,17 +28,17 @@
 			</div>
 			<div class="mySlides fade">
 				<div class="numbertext">3 / 6</div>
-				<a href="press/6a.pptx"><img src="images/6a.png" style="width:100%"></a>
+				<a href="press/6a.pdf"><img src="images/6a.png" style="width:100%"></a>
 				<div class="text">6 альфа</div>
 			</div>
 			<div class="mySlides fade">
 				<div class="numbertext">4 / 6</div>
-				<a href="press/6b.pptx"><img src="images/6b.png" style="width:100%"></a>
+				<a href="press/6b.pdf"><img src="images/6b.png" style="width:100%"></a>
 				<div class="text">6 бета</div>
 			</div>
 			<div class="mySlides fade">
 				<div class="numbertext">5 / 6</div>
-				<img src="images/7a.jpg" style="width:100%">
+				<a href="press/7a.pdf"><img src="images/7a.png" style="width:100%"></a>
 				<div class="text">7 альфа</div>
 			</div>
 			<div class="mySlides fade">
