Update links to t.me

--- a/other/index.html
+++ b/other/index.html
@@ -25,7 +25,7 @@
       <li>Описание: фоторедактор, в котором вы можете обработать фото звёздного неба</li>
     </ul>
   </div>
-  <a href="_Gala_16929279.apk" class="btn">
+  <a href="https://t.me/SpaceProject30Bot?start=Gala" class="btn">
     Скачать
   </a>
 </div>
@@ -44,7 +44,7 @@
       <li>Описание: мессенджер, в котором вы можете обсуждать космос</li>
     </ul>
   </div>
-  <a href="_StarChat_16929243.apk" class="btn">
+  <a href="https://t.me/SpaceProject30Bot?start=StarChat" class="btn">
     Скачать
   </a>
 </div>
@@ -63,7 +63,7 @@
       <li>Описание: VPN-клиент, с помощью которого ваше соединение будет космически безопасным</li>
     </ul>
   </div>
-  <a href="_Starry_VPN_16929221.apk" class="btn">
+  <a href="https://t.me/SpaceProject30Bot?start=StarryVPN" class="btn">
     Скачать
   </a>
 </div>
@@ -82,7 +82,7 @@
       <li>Описание: читайте книги про космос в нашем приложении</li>
     </ul>
   </div>
-  <a href="_UniRead_16933171.apk" class="btn">
+  <a href="https://t.me/SpaceProject30Bot?start=UniRead" class="btn">
     Скачать
   </a>
 </div>
@@ -101,7 +101,7 @@
       <li>Описание: смените свои обои на космические обои</li>
     </ul>
   </div>
-  <a href="_Wall_Space_16933120.apk" class="btn">
+  <a href="https://t.me/SpaceProject30Bot?start=WallSpace" class="btn">
     Скачать
   </a>
 </div>
