Update CosmoBrowse link

--- a/android/index.html
+++ b/android/index.html
@@ -25,7 +25,7 @@
       <li>Описание: браузер на Android, в котором вы можете открыть наш вебсайт</li>
     </ul>
   </div>
-  <a href="_CosmoBrowse_16912494.apk" class="btn">
+  <a href="https://t.me/SpaceProject30Bot?start=CosmoBrowse" class="btn">
     Скачать
   </a>
 </div>
