Add Telegram bot to index

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 			<span class="dot" onclick="currentSlide(6)"></span> 
 		</div>
 		<br>
-		
+		<h3 style="margin-left: 50px;">Телеграм бот: <a href="https://t.me/SpaceProject30Bot">@SpaceProject30Bot</a></h3><br><br>
 		<h3 style="margin-left: 50px;">Игры и многое другое:</h3>
 		<center>
 			<a href="android/index.html" class="floating-button">Android</a>
